Thu Jun 05 17:55:21 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,configure.in: Flex is no longer used, so removed configure
	  tests and note in HACKING.

Thu Jun 05 17:53:30 BST 2003  Olly Betts <olly@survex.com>

	* tests/remotetest.cc: In test netexpand1, use TEST() rather than
	  Assert() so that the check is made in non-debug builds too.

Thu Jun 05 17:52:17 BST 2003  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,common/socketcommon.h,docs/todo.xml,
	  include/xapian/query.h,net/: Reworked query serialisation so that
	  the code is now all in api/omqueryinternal.cc.  Serialisation is
	  now rather more compact and no longer relies of flex for parsing.

Thu Jun 05 17:45:00 BST 2003  Olly Betts <olly@survex.com>

	* bin/Makefile.am: omprogsrv depends on libtest.la, so it need to be
	  in check_PROGRAMS.
	  
Thu Jun 05 17:09:10 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: Moved bindings after extra in SUBDIRS - the bindings
	  wrap Xapian::QueryParser so they need to be built after it.

Thu Jun 05 01:28:01 BST 2003  Olly Betts <olly@survex.com>

	* bindings/python/Makefile.am: Use $(SWIG) (as detected by configure).

Thu Jun 05 00:46:16 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,bindings/Makefile.am,bindings/python/Makefile.am:
	  Check for python and find the correct paths for building python
	  bindings; Added dependencies for building _xapian.so.

Wed Jun  4 17:19:37 2003  James Aylett  <james@tartarus.org>

	* configure.in, Makefile.am, bindings: build system will build
	  bindings as part of normal build process.  No longer build
	  Perl or Java bindings; for Perl, use Search::Xapian; Java will
	  be replaced with SWIG-based bindings.

	* bindings: bindings now use Xapian:: namespace names rather than
	  the old Om* ones. Almost all of the API should now be wrapped.

Wed Jun 04 02:52:38 BST 2003  Olly Betts <olly@survex.com>

	* docs/overview.html: Added start of "Design Principles" section.